--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 0x06-starwars_api/.eslintrc.json
 0x06-starwars_api/package-lock.json
 0x07-rotate_2d_matrix/__pycache__/
+0x08-making_change/__pycache__/
