chore: Add prime game implementation and README file

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 0x06-starwars_api/package-lock.json
 0x07-rotate_2d_matrix/__pycache__/
 0x08-making_change/__pycache__/
+0x0A-primegame/__pycache__/0-prime_game.cpython-310.pyc
